src/css/style.css
/*Para dispositivos com width menor que 768px
body {
    padding-top: 77px;
}*/
/*Para dispositivos com width 1920px ou menor*/
@media only screen and (max-width: 1920px){
    #img-size {
        width: 100%;
        height: 500px;
    }
    .banner-rule {
        margin-top: 50px;
        margin-bottom: 50px;
        text-align: center;
    }
}
/*Para dispositivos com width 979px ou menor*/
@media only screen and (max-width: 979px) {
    #img-size {
        width: 100%;
        height: 400px;
    }
    .banner-rule {
        margin-top: 15px;
        text-align: center;
    }
    .banner-size {
        width: 100%;
    }
}  
/*Para dispositivos com width 767px ou menor*/
@media only screen and (max-width: 767px) {
    #img-size {
        width: 100%;
        height: 300px;
    }
    .banner-rule {
        margin-top: 15px;
        text-align: center;
    }
    .banner-size {
        width: 100%;
    }
}
/*Para dispositivos com width 480px ou menor*/
@media only screen and (max-width: 480px){
    #img-size {
        width: 100%;
        height: 300px;
    }
    .banner-rule {
        margin-top: 15px;
        text-align: center;
    }
    .banner-size {
        width: 100%;
    }
}
/*Font Web-Site*/
body{
    font-family: "trebuchet MS", helvetica, sans-serif;
}
header {
    position: fixed;
    top: 0;
}
/*Definindo tranparencia a barra de navegação do topo*/
nav.navbar-transparencia{
    background:rgb(253, 137, 195);
    padding: 2px 0px;
}
/*Espaçamentos da logo sobre a borda da area do navegador*/
.format_logo {
    margin-left: 50px;
    margin-top: 10px;
    margin-bottom: 10px;
}
/*Definindo propriedade da fonte do menu*/
.format_style_navBar { 
    font-size: 16px;
    font-weight: bold;
    margin-top: 0px;
    margin-left: 20px;    
}
/*Cor do botão de menu*/
li, a {
    padding-top: 0px;
    color: black;
}
/*alinhamento do texto carousel
.capa{
    text-align: center;
}
#home{
    padding-top: 180px;
}
*/
.divisor{
    width: 1px;
    background: black;
    margin: 12px 15px;
}
/*
.imagem-carrossel { 
    object-fit: cover;
}*/

/*Style sobre.html
.backgroud-sobre {
    background-image: url(../img/BG.png);
}*/
/*
div, hr{
    border-color:rgb(253, 137, 195);
    box-sizing:border-box;
    width:100%;  
}*/

/*css utilizado na pagina carousel.html teste*/
.carousel-inner img {
    width: 100%;
}
/*home*/
#home {
    height: 100vh;
    width: 100vw;
    background-color: yellow;
}
/*products*/
#products {
    width: 100vw;
    background-color: green;
}
/*about*/
#about {
    height: 100vh;
    width: 100vw;
}
/*Identificar cada pagina -  APAGAR DEPOIS*/
.about-background {
    background-color: rgb(253, 137, 195);
}
/*Centralizando conteudo about*/
.content-products-center, .content-about-center {
    display: flex;
    justify-content: center;
    align-items: center;
}

